--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,4 +12,5 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Modified Date", name: "modified_date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
