--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,6 +11,6 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Modified Date", name: "modified_date", widget: "datetime"}
+      - {label: "Publish Date", name: "date", widget: "datetime", format: 'MMM Do YY'}
+      - {label: "Modified Date", name: "modified_date", widget: "datetime", format: 'MMM Do YY'}
       - {label: "Body", name: "body", widget: "markdown"}
