--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,7 +12,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime", format: 'MMM Do YY'}
-      - {label: "Modified Date", name: "modified_date", widget: "datetime", format: 'MMM Do YY'}
+      - {label: "Publish Date", name: "date", widget: "datetime", format: 'YYYY MM DD'}
+      - {label: "Modified Date", name: "modified_date", widget: "datetime", format: 'YYYY MM DD'}
       - {label: "Body", name: "content", widget: "markdown"}
       - {label: "Featured Image", name: "image", widget: "image", default: public/assets/images/posts}
