--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "^12.0.10",
